--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,13 @@
         android:id="@+id/frame_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent">
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/et_search"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:hint="검색어를 입력해주세요"/>
     </FrameLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
