--- a/app/src/main/res/layout/layout_market_list.xml
+++ b/app/src/main/res/layout/layout_market_list.xml
@@ -16,7 +16,7 @@
         <include
             android:id="@+id/frame_market_filter"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             layout="@layout/layout_market_filter"
             bind:state="@{vm.sortState}"/>
 
