--- a/app/src/main/res/layout/layout_market_filter.xml
+++ b/app/src/main/res/layout/layout_market_filter.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="com.doachgosum.marketsampleapp.presentation.market.MarketSortState.FilterType"/>
         <variable
             name="state"
             type="com.doachgosum.marketsampleapp.presentation.market.MarketSortState" />
@@ -33,7 +34,7 @@
                 android:layout_width="8dp"
                 android:layout_height="16dp"
                 android:layout_marginStart="4dp"
-                app:imageResource="@{state.name.iconResId}"/>
+                app:imageResource="@{state.filterType==FilterType.NAME ? state.sortType.iconResId : state.SortType.NONE.iconResId}"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -55,7 +56,7 @@
                 android:layout_width="8dp"
                 android:layout_height="16dp"
                 android:layout_marginStart="4dp"
-                app:imageResource="@{state.price.iconResId}"/>
+                app:imageResource="@{state.filterType==FilterType.PRICE ? state.sortType.iconResId : state.SortType.NONE.iconResId}"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -77,7 +78,7 @@
                 android:layout_width="8dp"
                 android:layout_height="16dp"
                 android:layout_marginStart="4dp"
-                app:imageResource="@{state.change.iconResId}"/>
+                app:imageResource="@{state.filterType==FilterType.CHANGE ? state.sortType.iconResId : state.SortType.NONE.iconResId}"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
@@ -99,7 +100,7 @@
                 android:layout_width="8dp"
                 android:layout_height="16dp"
                 android:layout_marginStart="4dp"
-                app:imageResource="@{state.volume.iconResId}"/>
+                app:imageResource="@{state.filterType==FilterType.VOLUME ? state.sortType.iconResId : state.SortType.NONE.iconResId}"/>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
